working on data fusion
header and spectra import = ok, custom spectra function = possible,
missing: correct fusion, temp and relHum alignment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(esl)
 export(exportSampleList)
 export(genFolderStr)
+export(getFullData)
 export(getmd)
+export(readHeader)
+export(readSpectra)
 export(updateSettings)
 import(doParallel)
 import(foreach)
