working on import ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(exportSampleList)
 export(genFolderStr)
 export(getFullData)
 export(getmd)
+export(gfd)
 export(readHeader)
 export(readSpectra)
 export(updateSettings)
