--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(genFolderStr)
 export(getFullData)
 export(getmd)
 export(gfd)
+export(loadAQdata)
 export(readHeader)
 export(readSpectra)
+export(saveAQdata)
 export(updateSettings)
 import(doParallel)
 import(foreach)
