added update (git) and load data package (git)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(getFullData)
 export(getmd)
 export(gfd)
 export(loadAQdata)
+export(loadAquapData)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
+export(updateAquap)
 export(updateSettings)
 import(doParallel)
 import(foreach)
