--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(getFullData)
 export(getmd)
 export(gfd)
 export(loadAQdata)
-export(loadAquapData)
+export(loadAquapDatapackage)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
