Asking for Pirouette column names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getmd)
 export(gfd)
 export(loadAQdata)
 export(loadAquapDatapackage)
+export(printStdColnames)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
