.pir import = OK
still no temp alignment; any mix between spectra file and sample list
is possible.

check =OK;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(genFolderStr)
 export(getFullData)
 export(getmd)
 export(gfd)
+export(imp_searchAskColumns)
 export(loadAQdata)
 export(loadAquapDatapackage)
 export(printStdColnames)
