--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getFullData)
 export(getmd)
 export(gfd)
 export(imp_searchAskColumns)
+export(instAquap2Examples)
 export(loadAQdata)
 export(loadAquapDatapackage)
 export(printStdColnames)
