making datasets = probably ok
check=OK, zero-sets get cleaned out; very nice ssc function.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     devtools,
     foreach,
     doParallel,
-    xlsx
+    xlsx,
+    signal
 Suggests:
     knitr
 VignetteBuilder: knitr
