--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(printStdColnames)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
+export(selectWls)
+export(ssc)
 export(updateAquap)
 export(updateSettings)
 import(doParallel)
