--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(imp_searchAskColumns)
 export(instAquap2Examples)
 export(loadAQdata)
 export(loadAquapDatapackage)
+export(plot)
+export(plot_cube)
+export(plot_pca)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
