Working on documentation
check=OK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,10 @@ Collate:
     'gen_possibleValues.r'
     'gen_roxygenHelpers.r'
     'plot_all.r'
+    'plot_aqg.r'
     'plot_pca.r'
+    'plot_plsr.r'
+    'plot_simca.r'
     'prep_SampleList.r'
     'prep_importData.r'
     'prep_importData_specific.r'
