--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,11 @@ export(instAquap2Examples)
 export(loadAQdata)
 export(loadAquapDatapackage)
 export(plot)
+export(plot_aqg)
 export(plot_cube)
 export(plot_pca)
+export(plot_pls)
+export(plot_sim)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
