Calculating (only) Aquagrams possibly ok
check = OK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,19 @@ Imports:
     doParallel,
     xlsx,
     signal,
-    ChemometricsWithR
+    ChemometricsWithR,
+    plyr,
+    geometry,
+    som,
+    pls,
+    boot
 Suggests:
     knitr
 VignetteBuilder: knitr
 Collate:
     'an_pickPeaks.r'
     'aquap2.r'
+    'calc_aqg.r'
     'cl_classFunctions.r'
     'cl_classDefs.r'
     'cube_generateDatasets.r'
@@ -35,6 +41,7 @@ Collate:
     'doc_customTRH.r'
     'doc_metadata.r'
     'doc_settings.r'
+    'gen_coreDataManip.r'
     'gen_general.r'
     'gen_parallel.r'
     'gen_possibleValues.r'
