CI ellipse in PCA score plot (not working)
draft of code is there, but does not work yet.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Imports:
     som,
     pls,
     boot,
-    fmsb
+    fmsb,
+    lattice,
+    latticeExtra
 Suggests:
     knitr
 VignetteBuilder: knitr
