Base (the name problem)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Imports:
     devtools,
     foreach,
     doParallel,
-    xlsx,
+    openxlsx,
     signal,
     ChemometricsWithR,
     plyr,
@@ -61,3 +61,4 @@ Collate:
     'prep_metadata.r'
     'prep_writeMfiles.r'
     'zzz.r'
+RoxygenNote: 5.0.0.9000
