--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,15 +13,20 @@ export(gfd)
 export(imp_searchAskColumns)
 export(instAquap2Examples)
 export(loadAQdata)
+export(loadAquapDatapackage)
 export(plot)
+export(plot_aqg)
 export(plot_cube)
 export(plot_pca)
+export(plot_pls)
+export(plot_sim)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
 export(selectWls)
 export(ssc)
+export(updateAquap)
 export(updateSettings)
 exportMethods("[")
 import(doParallel)
