--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(plot_cube)
 export(plot_pca)
 export(plot_pls)
 export(plot_sim)
+export(plot_spectra)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
