added plot raw spectra from cube
check = OK (2 notes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(plot_cube)
 export(plot_pca)
 export(plot_pls)
 export(plot_sim)
-export(plot_spectra)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
@@ -30,6 +29,7 @@ export(ssc)
 export(updateAquap)
 export(updateSettings)
 exportMethods("[")
+exportMethods(plot_spectra)
 import(doParallel)
 import(foreach)
 import(methods)
