--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(ssc)
 export(updateAquap)
 export(updateSettings)
 exportMethods("[")
+exportMethods(getHeader)
+exportMethods(plot)
 exportMethods(plot_spectra)
 import(doParallel)
 import(foreach)
