--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Collate:
     'doc_classes.r'
     'doc_customImport.r'
     'doc_customTRH.r'
+    'doc_dptModules.r'
     'doc_metadata.r'
     'doc_methods.r'
     'doc_settings.r'
