pca from dataset = ok
plot_pca is now a method
Check = 1 warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ export(loadAQdata)
 export(loadAquapDatapackage)
 export(plot_aqg)
 export(plot_cube)
-export(plot_pca)
 export(plot_pls)
 export(plot_sim)
 export(printStdColnames)
@@ -36,6 +35,7 @@ exportMethods("-")
 exportMethods("[")
 exportMethods(getHeader)
 exportMethods(plot)
+exportMethods(plot_pca)
 exportMethods(plot_spectra)
 import(doParallel)
 import(foreach)
