--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,10 @@ export(esl)
 export(exportSampleList)
 export(gdmm)
 export(genFolderStr)
-export(getCubeDataset)
-export(getCubeModel)
 export(getFullData)
 export(getap)
+export(getcd)
+export(getcm)
 export(getmd)
 export(gfd)
 export(imp_searchAskColumns)
