--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     lattice,
     latticeExtra,
     rrcov,
-    rrcovHD
+    rrcovHD,
+    prospectr
 Suggests:
     knitr
 VignetteBuilder: knitr
