--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(loadAQdata)
 export(loadAquapDatapackage)
 export(plot_aqg)
 export(plot_cube)
-export(plot_pls)
 export(plot_sim)
 export(printStdColnames)
 export(readHeader)
@@ -37,6 +36,7 @@ exportMethods("[")
 exportMethods(getHeader)
 exportMethods(plot)
 exportMethods(plot_pca)
+exportMethods(plot_pls)
 exportMethods(plot_spectra)
 import(doParallel)
 import(foreach)
