Added Division of Datasets
also included function to make a dataset with only one wavelength (siWl)
Check=OK !

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,10 +28,12 @@ export(readHeader)
 export(readSpectra)
 export(saveAQdata)
 export(selectWls)
+export(siWl)
 export(ssc)
 export(updateAquap)
 export(updateSettings)
 exportMethods("-")
+exportMethods("/")
 exportMethods("[")
 exportMethods(getHeader)
 exportMethods(plot)
