working on plotting simca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(loadAQdata)
 export(loadAquapDatapackage)
 export(plot_aqg)
 export(plot_cube)
-export(plot_sim)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
@@ -39,6 +38,7 @@ exportMethods(getHeader)
 exportMethods(plot)
 exportMethods(plot_pca)
 exportMethods(plot_pls)
+exportMethods(plot_simca)
 exportMethods(plot_spectra)
 import(doParallel)
 import(foreach)
