working on noise exp folder
check = OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(esl)
 export(exportSampleList)
 export(gdmm)
 export(genFolderStr)
+export(genNoiseRecExp)
 export(getFullData)
 export(getap)
 export(getcd)
