Gen. folder structure for TempCalibExp.
Check = OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(exportSampleList)
 export(gdmm)
 export(genFolderStr)
 export(genNoiseRecExp)
+export(genTempCalibExp)
 export(getFullData)
 export(getap)
 export(getcd)
