--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(getcm)
 export(getmd)
 export(gfd)
 export(imp_searchAskColumns)
+export(indepPlsPred)
 export(instAquap2Examples)
 export(loadAQdata)
 export(loadAquapDatapackage)
