--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,12 @@ export(getcm)
 export(getmd)
 export(gfd)
 export(imp_searchAskColumns)
-export(indepPlsPred)
 export(instAquap2Examples)
 export(loadAQdata)
 export(loadAquapDatapackage)
 export(plot_aqg)
 export(plot_cube)
+export(plot_pls_indepPred)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
