Working on plsr indep. pred
Check = OK
Now swarm plotting :-)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     rrcov,
     rrcovHD,
     prospectr,
-    plotrix
+    plotrix,
+    beeswarm
 Suggests:
     knitr
 VignetteBuilder: knitr
