trasform Tellsp to AP2
Check= OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(saveAQdata)
 export(selectWls)
 export(siWl)
 export(ssc)
+export(ttap)
 export(updateAquap)
 export(updateSettings)
 exportMethods("-")
