--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ Collate:
     'prep_importData.r'
     'prep_importData_specific.r'
     'prep_metadata.r'
+    'prep_transformToAp2.r'
     'prep_writeMfiles.r'
     'zzz.r'
 RoxygenNote: 5.0.1
