added tsp integration
Check = ok

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(do_addNoise)
 export(do_avg)
 export(do_detrend)
+export(do_dptSeq)
 export(do_emsc)
 export(do_gapDer)
 export(do_msc)
@@ -35,6 +36,7 @@ export(selectWls)
 export(siWl)
 export(ssc)
 export(ttap)
+export(ttapM)
 export(updateAquap)
 export(updateSettings)
 exportMethods("-")
