--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(loadAquapDatapackage)
 export(plot_aqg)
 export(plot_cube)
 export(plot_pls_indepPred)
+export(pls_outlier_getIndices)
 export(printStdColnames)
 export(readHeader)
 export(readSpectra)
