updated metadata fileInfo
other small corrections
check = OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(siWl)
 export(ssc)
 export(ttap)
 export(ttapM)
+export(updateAquap)
 export(updateSettings)
 exportMethods("-")
 exportMethods("/")
