added update via GitHub
check = OK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     prospectr,
     plotrix,
     pracma,
-    beeswarm
+    beeswarm,
+    devtools
 Suggests:
     knitr
 VignetteBuilder: knitr
