--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(siWl)
 export(ssc)
 export(ttap)
 export(ttapM)
-export(updateAquap)
+export(updateAquap2)
 export(updateSettings)
 exportMethods("-")
 exportMethods("/")
