in progress of adding linear Aquagram
Check = OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(plot_cube)
 export(plot_pls_indepPred)
 export(pls_outlier_getIndices)
 export(printStdColnames)
+export(reColor)
 export(readHeader)
 export(readSpectra)
 export(saveAQdata)
