modified AUCD proc.
now loess not always performed.
included do_resampleNIR, etc.
various bugfixes
Check = OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(do_dptSeq)
 export(do_emsc)
 export(do_gapDer)
 export(do_msc)
+export(do_resampleNIR)
 export(do_sgolay)
 export(do_snv)
 export(esl)
