--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,10 @@ export(gfd)
 export(imp_searchAskColumns)
 export(instAquap2Examples)
 export(loadAQdata)
+export(plot_DA)
+export(plot_NNET)
+export(plot_RNF)
+export(plot_SVM)
 export(plot_aqg)
 export(plot_cube)
 export(plot_pls_indepPred)
