starting to plot
check = OK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,13 +47,13 @@ VignetteBuilder: knitr
 Collate: 
     'aquap2.r'
     'calc_aqg.r'
+    'calc_classif_gen.r'
     'calc_noise.r'
     'calc_plsr.r'
     'calc_simca.r'
     'cl_classFunctions.r'
     'cl_classDefs.r'
     'classification_X.r'
-    'classification_general.r'
     'cube_generateDatasets.r'
     'cube_makeModels.r'
     'doc_anproc.r'
@@ -73,7 +73,8 @@ Collate:
     'peaks_pick+plot.r'
     'plot_all.r'
     'plot_aqg.r'
-    'plot_classification.r'
+    'plot_classif_gen.r'
+    'plot_classif_spec.r'
     'plot_pca.r'
     'plot_plsr.r'
     'plot_simca.r'
