--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,6 @@ export(gfd)
 export(imp_searchAskColumns)
 export(instAquap2Examples)
 export(loadAQdata)
-export(plot_DA)
-export(plot_NNET)
-export(plot_RNF)
-export(plot_SVM)
 export(plot_aqg)
 export(plot_cube)
 export(plot_pls_indepPred)
@@ -52,10 +48,14 @@ exportMethods("[")
 exportMethods(getHeader)
 exportMethods(getWavelengths)
 exportMethods(plot)
+exportMethods(plot_da)
+exportMethods(plot_nnet)
 exportMethods(plot_pca)
 exportMethods(plot_pls)
+exportMethods(plot_rnf)
 exportMethods(plot_simca)
 exportMethods(plot_spectra)
+exportMethods(plot_svm)
 import(doParallel)
 import(foreach)
 import(grDevices)
