--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(imp_searchAskColumns)
 export(instAquap2Examples)
 export(loadAQdata)
 export(plot_aqg)
+export(plot_classifX_indepPred)
 export(plot_cube)
 export(plot_pls_indepPred)
 export(pls_outlier_getIndices)
