added external data for indep. pred.
Check = OK (2 notes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,11 +58,17 @@ exportMethods(plot_rnf)
 exportMethods(plot_simca)
 exportMethods(plot_spectra)
 exportMethods(plot_svm)
+import(MASS)
 import(doParallel)
+import(e1071)
 import(foreach)
 import(grDevices)
 import(graphics)
+import(mclust)
+import(mda)
 import(methods)
+import(nnet)
+import(randomForest)
 import(stats)
 import(utils)
 importFrom(pls,MSEP)
