--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: aquap2
 Type: Package
 Title: Multivariate Data Analysis Tools for R including Aquaphotomics Methods
-Version: 0.2.2
+Version: 0.3.0
 Date: 2016-11-26
 Author: Bernhard Pollner, Zoltan Kovacs
 Maintainer: Bernhard Pollner <bernhard.pollner@mac.com>
@@ -10,7 +10,8 @@ Description: Methods and tools for multivariate data analysis in R, with an
 License: GPL (>=2)
 LazyLoad: yes
 Depends:
-    R (>= 3.3.2)
+    R (>= 3.3.0)
+Encoding: UTF-8
 Imports:
     methods,
     foreach,
@@ -88,4 +89,4 @@ Collate:
     'prep_transformToAp2.r'
     'prep_writeMfiles.r'
     'zzz.r'
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
