--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ export(gdmm)
 export(genFolderStr)
 export(genNoiseRecExp)
 export(genTempCalibExp)
-export(generateMergeLabels)
 export(getFullData)
 export(getap)
 export(getcd)
@@ -50,6 +49,7 @@ exportMethods("-")
 exportMethods("/")
 exportMethods("[")
 exportMethods("[<-")
+exportMethods(generateMergeLabels)
 exportMethods(getHeader)
 exportMethods(getWavelengths)
 exportMethods(mergeDatasets)
