--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: aquap2
 Type: Package
 Title: Multivariate Data Analysis Tools for R including Aquaphotomics Methods
-Version: 0.4.4
+Version: 0.4.5
 Date: 2023-08-31
 Author: Bernhard Pollner, Zoltan Kovacs
 Maintainer: Bernhard Pollner <bernhard.pollner@mac.com>
@@ -45,7 +45,8 @@ Imports:
     e1071,
     nnet
 Suggests:
-    knitr
+    knitr,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Collate: 
     'aquap2.r'
@@ -91,3 +92,4 @@ Collate:
     'prep_writeMfiles.r'
     'zzz.r'
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
