reg. multiplyRows in sample list
esl can now export with multiplied rows, format is only xlsx, which is nicely colored.
gfd can auto-detect the sample list...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(printStdColnames)
 export(reColor)
 export(readHeader)
 export(readSpectra)
+export(sampleList_multiplyRows)
 export(saveAQdata)
 export(selectWls)
 export(siWl)
