testing data import, export to xlsx
improved coverage in data import.
.pir, .xlsx and .txt as data import still missing.
also custom TRH

Made a nixe export to xlsx, with one sheet as data and one as metadata. Will help in importing from xlsx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(do_sgolay)
 export(do_snv)
 export(esl)
 export(exportSampleList)
+export(export_ap2_ToXlsx)
 export(gdmm)
 export(genFolderStr)
 export(genNoiseRecExp)
