now importing .dat
cmd check is a desaster !!
updating the setting is not working any more!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(do_snv)
 export(esl)
 export(exportSampleList)
 export(export_ap2_ToXlsx)
+export(export_header_toXls)
 export(gdmm)
 export(genFolderStr)
 export(genNoiseRecExp)
@@ -74,12 +75,12 @@ import(e1071)
 import(foreach)
 import(grDevices)
 import(graphics)
-import(mclust)
-import(mda)
 import(methods)
 import(nnet)
 import(randomForest)
 import(stats)
 import(utils)
+importFrom(mclust,MclustDA)
+importFrom(mda,fda)
 importFrom(pls,MSEP)
 importFrom(pls,mvrValstats)
