fixed settings problem
check = ?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(selectWls)
 export(siWl)
 export(siWlg)
 export(ssc)
+export(testUniset)
 export(ttap)
 export(ttapM)
 export(updateSettings)
