--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(getmd)
 export(getstn)
 export(gfd)
 export(imp_searchAskColumns)
+export(importExport_raw_toXls)
 export(loadAQdata)
 export(plot_aqg)
 export(plot_classifX_indepPred)
